--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,6 +122,12 @@
                 <h3>WebSerial Connection</h3>
                 <button id="connect-btn">Connect to ESP32S3</button>
                 <div id="connection-status" class="status disconnected">Disconnected</div>
+                <div style="margin-top: 8px; display: grid; grid-template-columns: auto auto 1fr; gap: 8px; align-items: center;">
+                    <label for="model-file" style="font-size: 12px; color: #ccc;">Load custom model:</label>
+                    <button id="model-file-btn">Choose GLB...</button>
+                    <span id="model-file-name" style="font-size: 11px; color: #aaa; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"></span>
+                    <input type="file" id="model-file" accept=".glb,.gltf" style="display:none;" />
+                </div>
             </div>
             
             <div class="control-group">
