--- a/frontend/index.html
+++ b/frontend/index.html
@@ -174,6 +174,7 @@
                     <div>Accel: <span id="accel-x">0.000</span>, <span id="accel-y">0.000</span>, <span id="accel-z">0.000</span>g</div>
                     <div>Gyro: <span id="gyro-x">0.00</span>, <span id="gyro-y">0.00</span>, <span id="gyro-z">0.00</span>°/s</div>
                     <div>Temp: <span id="temperature">0.0</span>°C</div>
+                    <div>Fusion: <span id="fusion-roll">—</span>°, <span id="fusion-pitch">—</span>°, <span id="fusion-yaw">—</span>°</div>
                 </div>
             </div>
             <div class="footer-links">
@@ -182,6 +183,7 @@
         </div>
         <canvas id="accel-graph"></canvas>
         <canvas id="gyro-graph" style="position: absolute; right: 20px; bottom: 180px; width: 360px; height: 140px; z-index: 90; border-radius: 8px; overflow: hidden; pointer-events: none; box-shadow: 0 4px 16px rgba(0,0,0,0.4);"></canvas>
+        <canvas id="fusion-graph" style="position: absolute; right: 20px; bottom: 340px; width: 360px; height: 140px; z-index: 90; border-radius: 8px; overflow: hidden; pointer-events: none; box-shadow: 0 4px 16px rgba(0,0,0,0.4);"></canvas>
     </div>
     
     <script type="module" src="/src/main.ts"></script>
