Adds message rate to front end

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -136,6 +136,7 @@
                 <h3>WebSerial Connection</h3>
                 <button id="connect-btn">Connect to ESP32S3</button>
                 <div id="connection-status" class="status disconnected">Disconnected</div>
+                <div id="message-rate" class="data-display" style="font-size: 12px; color: #aaa; margin-top: 4px;">Msgs/s: 0</div>
                 <div style="margin-top: 8px; display: grid; grid-template-columns: auto auto 1fr; gap: 8px; align-items: center;">
                     <label for="model-file" style="font-size: 12px; color: #ccc;">Load custom model:</label>
                     <button id="model-file-btn">Choose GLB...</button>
